--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-async-handler": "^1.2.0",
+    "express-session": "^1.18.1",
+    "file-type": "^16.5.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.3",
     "node-webrtc": "^0.0.0",
